<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnBrowseWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="browseWeb"
        android:text="@string/web_browser" />

    <Button
        android:id="@+id/btnShowMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showMap"
        android:text="@string/show_map" />

    <Button
        android:id="@+id/btnMakeCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="makeCall"
        android:text="@string/make_call" />

    <Button
        android:id="@+id/btnShareText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="shareText"
        android:text="@string/share_text" />
    <TextView
        android:layout_width="match_parent"
        android:text="@string/input_text_to_share_below"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/inputText"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:background="@android:color/holo_blue_light"
        android:minEms="10"
        android:layout_height="wrap_content"/>

</LinearLayout>